install(FILES ${CMAKE_CURRENT_BINARY_DIR}/rozo.7 DESTINATION share/man/man7)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/rozofs.8 DESTINATION share/man/man8)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/storaged.8 DESTINATION share/man/man8)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/storage.conf.5 DESTINATION share/man/man5)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/exportd.8 DESTINATION share/man/man8)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/export.conf.5 DESTINATION share/man/man5)
