install(FILES ${CMAKE_CURRENT_BINARY_DIR}/rozo.7 DESTINATION share/man/man7 COMPONENT client)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/rozomount.8 DESTINATION share/man/man8 COMPONENT client)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/storaged.8 DESTINATION share/man/man8 COMPONENT storage)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/storage.conf.5 DESTINATION share/man/man5 COMPONENT storage)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/exportd.8 DESTINATION share/man/man8 COMPONENT export)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/export.conf.5 DESTINATION share/man/man5 COMPONENT export)
